[package]
name = "gameoflife"
version = "0.1.0"
authors = ["Michael Daffin <michael.daffin@switchconcepts.com>"]
description = "Conway's Game Of Life simulator"
publish = false
license = "MIT"

[dependencies.cgol]
path = ".."

[dependencies]
piston_window = "0.50.0"
find_folder = "0.3.0"
image = "0.10.0"
piston2d-drag_controller = "0.14.0"
gfx = "0.12.0"
gfx_device_gl = "0.11.0"
vecmath = "0.2.0"
pistoncore-sdl2_window = "0.33.0"
rand = "0.3.14"
